Обновил команду i18n для поддержки HTML, добавил атрибуты локализации в index.html и улучшил структуру разметки для лучшей читаемости.

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,14 +5,14 @@
   "successful_repairs": "successful repairs",
   "average_experience": "average experience of masters",
   "in_batumi": "in Batumi",
-  "working_hours": "per week, from 10 to 19",
-  "sales_and_discounts": "Sales and Discounts",
+  "working_hours": "7 days a week, from 10 AM to 7 PM",
+  "sales_and_discounts": "Promotions and Discounts",
   "cashback_cards": "Cashback Cards",
-  "save_up_to": "Save up to {percent}% on works and parts with a loyalty card",
-  "all_may": "All May {percent}% discount",
+  "save_up_to": "Save up to <b>7%</b> on works and spare parts with a loyalty card",
+  "all_may": "All <b>May</b> discount <b>10%</b>",
   "cooling_system": "on all cooling system works, thermostats, pumps, radiators and antifreeze",
   "services_and_specialization": "Services and Specialization",
-  "maintenance": "Technical Maintenance ☆",
+  "maintenance": "Maintenance ☆",
   "diagnostics": "Diagnostics ☆",
   "chassis": "Chassis ☆",
   "engine": "Engine ☆",
@@ -22,50 +22,65 @@
   "manual_transmission": "Manual Transmission",
   "leak_repair": "Leak Repair",
   "interior": "Interior Assembly/Disassembly",
-  "what_we_dont_do": "What We Don't Do",
-  "automatic_transmission": "Automatic Transmission Repair, but we can replace the whole transmission or change oil",
+  "what_we_dont_do": "What We DON'T Do",
+  "automatic_transmission": "Automatic transmission repair, but we can replace the entire gearbox or change the oil",
   "body_repair": "Body Repair",
   "painting": "Painting",
   "tire_service": "Tire Service",
   "ac_service": "AC Refill",
   "other": "Other",
   "reliable_hands": "Your Car in Reliable Hands",
-  "show_and_tell": "We can always show and explain what's happening with your car.",
-  "cleanliness": "We maintain cleanliness, use seat covers, floor mats and more.",
-  "by_appointment": "We work by appointment, respecting your and our time.",
-  "parts_ordering": "We can compile a list, find or order parts and oils.",
-  "modern_software": "We use modern auto service software and special tools.",
-  "official_work": "We work officially and provide all necessary documents.",
+  "show_and_tell": "We can always <b>show</b> and explain what's happening with your car.",
+  "cleanliness": "We maintain <b>cleanliness</b>, using seat covers, floor mats, and more.",
+  "by_appointment": "We work <b>by appointment</b>, respecting your and our time.",
+  "parts_ordering": "We can compile a list, find or order <b>spare parts</b> and oils.",
+  "modern_software": "We use <b>modern software</b> for auto services and special tools.",
+  "official_work": "We work <b>officially</b> and provide all necessary documents.",
   "cases_and_reviews": "Cases and Customer Reviews",
   "how_we_work": "How We Work",
   "contact": "Contact",
-  "contact_description": "Write to us on social networks or call by phone.",
-  "contact_recommendation": "We recommend specifying make, model, year and VIN code right away.",
+  "contact_description": "Write to us on <b>social networks</b> or call by phone.",
+  "contact_recommendation": "We recommend specifying the make, model, year and VIN code right away.",
   "consultation": "Consultation and Diagnostics",
-  "consultation_description": "You come to our service, the master inspects the car and agrees with you on the cost of work and terms.",
-  "parts": "Parts, Oils and Consumables",
-  "parts_description": "We can select, find and order necessary parts.",
-  "parts_details": "100% prepayment. Order terms 10-14 days. Installation of your parts is also available.",
+  "consultation_description": "You come to our service, the master conducts an <b>inspection</b> of the car and agrees with you on the cost of work and terms.",
+  "parts": "Spare Parts, Oils and Consumables",
+  "parts_description": "We can select, find and order necessary <b>spare parts</b>.",
+  "parts_details": "100% prepayment. When ordering, terms are 10-14 days. Installation of your spare parts is also available.",
   "repair": "Repair and Maintenance",
-  "repair_description": "Our masters perform all necessary types of work.",
+  "repair_description": "Our masters perform all necessary types of <b>work</b>.",
   "repair_guarantee": "Warranty up to 6 months, depending on the type of repair.",
   "ready": "Ready to Go",
-  "ready_description": "We contact you when the work is coming to an end. Quality control is performed. You pick up the car.",
+  "ready_description": "We contact you when the work is coming to an end. Quality control is performed. You <b>pick up</b> the car.",
   "technical_capabilities": "Technical Capabilities and Equipment",
   "lifts": "3 Lifts",
   "press": "Press up to 20 tons",
   "welding_equipment": "Welding: semi-automatic and inverter",
   "air_tools": "Impact wrenches, compressor",
   "co2_check": "CO₂ check in fluids",
-  "smoke_generator": "Smoke Generator",
-  "diagnostic_equipment": "Diagnostic Equipment",
-  "special_tools": "Special tools, fixtures",
+  "smoke_generator": "Smoke generator",
+  "diagnostic_equipment": "Diagnostic equipment",
+  "special_tools": "Special tools, holders",
   "pullers": "Many pullers and wrenches",
   "crane": "1.5 ton crane",
   "contacts": "Contacts",
   "phone": "Phone:",
   "address": "Address:",
-  "working_schedule": "Working Hours:",
-  "social_networks": "Our Social Networks:",
-  "copyright": "Auto Service Georgia Like Auto © 2025"
+  "working_schedule": "Working hours: <b>Mon-Sun from 10:00 AM to 7:00 PM</b>",
+  "social_networks": "Our social networks:",
+  "copyright": "Auto Service Georgia Like Auto © 2025",
+  "consultation_and_diagnostics": "Consultation and Diagnostics",
+  "diagnostics_description": "You come to our service, the master <b>inspects</b> the car and agrees with you on the cost of work and deadlines.",
+  "parts_and_oils": "Parts, Oils and Consumables",
+  "parts_payment": "100% prepayment. Order lead time 10-14 days. Installation of your parts is also available.",
+  "repair_and_maintenance": "Repair and Maintenance",
+  "warranty": "Warranty up to 6 months, depending on the type of repair.",
+  "ready_to_go": "Ready to Go",
+  "completion_description": "We contact you when the work is coming to an end. Quality control is performed. You <b>pick up</b> the car.",
+  "tools": "Wrenches, compressor",
+  "co2_check": "CO₂ check in fluids",
+  "smoke_generator": "Smoke generator",
+  "diagnostic_equipment": "Diagnostic equipment",
+  "special_tools": "Special tools, fixtures",
+  "pullers": "Multiple pullers and wrenches",
+  "crane": "1.5 ton crane"
 } 
