--- a/locales/ka.json
+++ b/locales/ka.json
@@ -5,67 +5,84 @@
   "successful_repairs": "წარმატებული რემონტი",
   "average_experience": "მასტერების საშუალო გამოცდილება",
   "in_batumi": "ბათუმში",
-  "working_hours": "კვირაში, 10-დან 19-მდე",
+  "working_hours": "კვირაში 7 დღე, 10:00-დან 19:00-მდე",
   "sales_and_discounts": "ფასდაკლებები და აქციები",
   "cashback_cards": "ქეშბექის ბარათები",
-  "save_up_to": "დაზოგეთ {percent}% სამუშაოებსა და ნაწილებზე ლოიალობის ბარათით",
-  "all_may": "მთელი მაისი {percent}% ფასდაკლება",
+  "save_up_to": "დაზოგეთ <b>7%</b> სამუშაოებსა და запчастях-ზე მუდმივი მომხმარებლის ბარათით",
+  "all_may": "მთელი <b>მაისი</b> ფასდაკლება <b>10%</b>",
   "cooling_system": "გაგრილების სისტემის სამუშაოებზე, თერმოსტატებზე, ტუმბოებზე, რადიატორებსა და ანტიფრიზზე",
   "services_and_specialization": "მომსახურება და სპეციალიზაცია",
   "maintenance": "ტექნიკური მომსახურება ☆",
   "diagnostics": "დიაგნოსტიკა ☆",
   "chassis": "ქვედა ნაწილი ☆",
-  "engine": "ძრავი ☆",
+  "engine": "ძრავა ☆",
   "brakes": "მუხრუჭები ☆",
   "electrical": "ელექტრიკოსი",
   "welding": "მეტალის შედუღება",
-  "manual_transmission": "მექანიკური გადაცემათა კოლოფი",
+  "manual_transmission": "მექანიკური კოლოფი",
   "leak_repair": "გაჟონვის აღმოფხვრა",
-  "interior": "სალონის აწყობა/დაშლა",
+  "interior": "სალონის დემონტაჟი და მონტაჟი",
   "what_we_dont_do": "რასაც არ ვაკეთებთ",
-  "automatic_transmission": "ავტომატური გადაცემათა კოლოფის რემონტი, მაგრამ შეგვიძლია მთლიანად შევცვალოთ ან ზეთი შევცვალოთ",
+  "automatic_transmission": "ავტომატური კოლოფის რემონტი, მაგრამ შეგვიძლია მთლიანად შევცვალოთ ან ზეთი შევცვალოთ",
   "body_repair": "კუზოვის რემონტი",
   "painting": "ფერწერა",
-  "tire_service": "საბურავების სერვისი",
-  "ac_service": "კონდიციონერის გადაყენება",
+  "tire_service": "შინომონტაჟი",
+  "ac_service": "კონდიციონერის დატენვა",
   "other": "სხვა",
-  "reliable_hands": "თქვენი მანქანა საიმედო ხელებში",
-  "show_and_tell": "ყოველთვის შეგვიძლია ვაჩვენოთ და აგიხსნათ რა ხდება თქვენს მანქანასთან.",
-  "cleanliness": "ვიცავთ სისუფთავეს, ვიყენებთ საჯდომის საფარებს, ხალიჩებს და სხვა.",
-  "by_appointment": "ვმუშაობთ ჩაწერით, პატივს ვცემთ თქვენს და ჩვენს დროს.",
-  "parts_ordering": "შეგვიძლია შევადგინოთ სია, ვიპოვოთ ან შევუკვეთოთ ნაწილები და ზეთები.",
-  "modern_software": "ვიყენებთ თანამედროვე ავტოსერვისის პროგრამებს და სპეციალურ ინსტრუმენტებს.",
-  "official_work": "ვმუშაობთ ოფიციალურად და ვაძლევთ ყველა საჭირო დოკუმენტს.",
-  "cases_and_reviews": "შემთხვევები და მომხმარებელთა მიმოხილვები",
+  "reliable_hands": "თქვენი მანქანა საიმედო ხელებშია",
+  "show_and_tell": "ყოველთვის შეგვიძლია <b>ვაჩვენოთ</b> და გავუხსნათ რა ხდება თქვენს მანქანასთან.",
+  "cleanliness": "ვიცავთ <b>სისუფთავეს</b>, ვიყენებთ საფარებს, ხალიჩებს და სხვა.",
+  "by_appointment": "ვმუშაობთ <b>ჩაწერით</b>, ვზოგავთ თქვენს და ჩვენს დროს.",
+  "parts_ordering": "შეგვიძლია შევადგინოთ სია, ვიპოვოთ ან შევუკვეთოთ <b>დამხმარე ნაწილები</b> და ზეთები.",
+  "modern_software": "ვიყენებთ <b>თანამედროვე პროგრამებს</b> ავტოსერვისებისთვის და სპეციალურ ინსტრუმენტებს.",
+  "official_work": "ვმუშაობთ <b>ოფიციალურად</b> და ვაძლევთ ყველა საჭირო დოკუმენტს.",
+  "cases_and_reviews": "შემთხვევები და მომხმარებელთა გამოხმაურებები",
   "how_we_work": "როგორ ვმუშაობთ",
   "contact": "კონტაქტი",
-  "contact_description": "მოგვწერეთ სოციალურ ქსელებში ან დაგვირეკეთ.",
+  "contact_description": "დაგვიწერეთ <b>სოციალურ ქსელებში</b> ან დაგვირეკეთ.",
   "contact_recommendation": "გირჩევთ დაუყოვნებლივ მიუთითოთ მარკა, მოდელი, წელი და VIN კოდი.",
   "consultation": "კონსულტაცია და დიაგნოსტიკა",
-  "consultation_description": "მოდიხართ ჩვენს სერვისში, მასტერი ამოწმებს მანქანას და თანხმდება თქვენთან სამუშაოს ღირებულებასა და ვადებზე.",
-  "parts": "ნაწილები, ზეთები და სახარჯო მასალები",
-  "parts_description": "შეგვიძლია შევარჩიოთ, ვიპოვოთ და შევუკვეთოთ საჭირო ნაწილები.",
-  "parts_details": "100% წინასწარ გადახდა. შეკვეთის ვადა 10-14 დღე. ასევე ხელმისაწვდომია თქვენი ნაწილების დაყენება.",
+  "consultation_description": "მოდიხართ ჩვენს სერვისში, მასტერი ატარებს მანქანის <b>შემოწმებას</b> და თანხმდება თქვენთან სამუშაოების ღირებულებასა და ვადებზე.",
+  "parts": "დამხმარე ნაწილები, ზეთები და სახარჯო მასალები",
+  "parts_description": "შეგვიძლია შევარჩიოთ, ვიპოვოთ და შევუკვეთოთ საჭირო <b>დამხმარე ნაწილები</b>.",
+  "parts_details": "100% წინასწარ გადახდა. შეკვეთისას ვადები 10-14 დღეა. ასევე ხელმისაწვდომია თქვენი დამხმარე ნაწილების მონტაჟი.",
   "repair": "რემონტი და მომსახურება",
-  "repair_description": "ჩვენი მასტერები ასრულებენ ყველა საჭირო სამუშაოს.",
+  "repair_description": "ჩვენი მასტერები ასრულებენ ყველა საჭირო სახის <b>სამუშაოს</b>.",
   "repair_guarantee": "გარანტია 6 თვემდე, რემონტის ტიპის მიხედვით.",
-  "ready": "მზადაა გასვლა",
-  "ready_description": "დაგიკავშირდებით, როცა სამუშაო დასრულების უახლოვდება. ხორციელდება ხარისხის კონტროლი. თქვენ იღებთ მანქანას.",
+  "ready": "შეგიძლიათ წახვიდეთ",
+  "ready_description": "დაგიკავშირდებით, როდესაც სამუშაო დასრულდება. ხორციელდება ხარისხის კონტროლი. თქვენ <b>იღებთ</b> მანქანას.",
   "technical_capabilities": "ტექნიკური შესაძლებლობები და აღჭურვილობა",
   "lifts": "3 ამწე",
   "press": "პრესი 20 ტონამდე",
-  "welding_equipment": "შედუღება: ნახევრად ავტომატური და ინვერტორი",
+  "welding_equipment": "შედუღება: ნახევრად ავტომატი და ინვერტორი",
   "air_tools": "ჰაერის ხრახნიანი, კომპრესორი",
   "co2_check": "CO₂-ის შემოწმება სითხეებში",
-  "smoke_generator": "მოწევის გენერატორი",
+  "smoke_generator": "დიმის გენერატორი",
   "diagnostic_equipment": "დიაგნოსტიკური აღჭურვილობა",
   "special_tools": "სპეციალური ინსტრუმენტები, ფიქსატორები",
-  "pullers": "ბევრი ამწევი და ქანჩი",
+  "pullers": "მრავალი ამოღება და საკრავი",
   "crane": "1.5 ტონიანი ამწე",
   "contacts": "კონტაქტები",
   "phone": "ტელეფონი:",
   "address": "მისამართი:",
-  "working_schedule": "სამუშაო საათები:",
+  "working_schedule": "სამუშაო საათები: <b>ორშ-კვირა 10:00-დან 19:00-მდე</b>",
   "social_networks": "ჩვენი სოციალური ქსელები:",
-  "copyright": "ავტოსერვისი Georgia Like Auto © 2025"
+  "copyright": "ავტოსერვისი Georgia Like Auto © 2025",
+  "consultation_and_diagnostics": "კონსულტაცია და დიაგნოსტიკა",
+  "diagnostics_description": "თქვენ მოდიხართ ჩვენს სერვისში, ოსტატი ახორციელებს მანქანის <b>ინსპექტირებას</b> და თანხმდება თქვენთან სამუშაოს ღირებულებასა და ვადებზე.",
+  "parts_and_oils": "ნაწილები, ზეთები და სახარჯი მასალები",
+  "parts_payment": "100% წინასწარ გადახდა. შეკვეთის ვადა 10-14 დღე. ასევე ხელმისაწვდომია თქვენი ნაწილების მონტაჟი.",
+  "repair_and_maintenance": "რემონტი და მოვლა",
+  "repair_and_maintenance_description": "ჩვენი ოსტატები ასრულებენ ყველა საჭირო სახის <b>სამუშაოს</b>.",
+  "warranty": "გარანტია 6 თვემდე, რემონტის ტიპის მიხედვით.",
+  "ready_to_go": "მზადაა გასვლა",
+  "completion_description": "ჩვენ დაგიკავშირდებით, როდესაც სამუშაო დასრულებისკენ მიდის. ხორციელდება ხარისხის კონტროლი. თქვენ <b>იღებთ</b> მანქანას.",
+  "welding_equipment": "შედუღება: ნახევრად ავტომატური და ინვერტორი",
+  "tools": "გასაღებები, კომპრესორი",
+  "co2_check": "CO₂-ის შემოწმება სითხეებში",
+  "smoke_generator": "წვის გენერატორი",
+  "diagnostic_equipment": "დიაგნოსტიკური აღჭურვილობა",
+  "special_tools": "სპეციალური ხელსაწყოები, ფიქსატორები",
+  "pullers": "მრავალი ამწევი და გასაღები",
+  "crane": "1.5 ტონიანი ამწე"
 } 
