--- a/locales/ru.json
+++ b/locales/ru.json
@@ -8,8 +8,8 @@
   "working_hours": "в неделю, с 10 до 19",
   "sales_and_discounts": "Акции и скидки",
   "cashback_cards": "Карты кэшбека",
-  "save_up_to": "Экономьте до {percent}% на работах и запчастях с картой постоянного покупателя",
-  "all_may": "Весь Май скидка {percent}%",
+  "save_up_to": "Экономьте до <b>7%</b> на работах и запчастях с картой постоянного покупателя",
+  "all_may": "Весь <b>Май</b> скидка <b>10%</b>",
   "cooling_system": "на все работы по системе охлаждения, термостаты, помпы, радиаторы и антифриз",
   "services_and_specialization": "Услуги и специализация",
   "maintenance": "Техническое обслуживание ☆",
@@ -30,32 +30,29 @@
   "ac_service": "Заправка кондиционеров",
   "other": "Хернёй",
   "reliable_hands": "Ваш автомобиль в надежных руках",
-  "show_and_tell": "Всегда можем показать и рассказать, что происходит с автомобилем.",
-  "cleanliness": "Соблюдаем чистоту, используем накидки на сидения, коврики и не только.",
-  "by_appointment": "Работаем по записи, бережём своё и Ваше время.",
-  "parts_ordering": "Можем сами составить список, найти или заказать запчасти и масла.",
-  "modern_software": "Используем современное ПО для автосервисов и специнструменты.",
-  "official_work": "Работаем официально и предоставляем все необходимые документы.",
+  "show_and_tell": "Всегда можем <b>показать</b> и рассказать, что происходит с автомобилем.",
+  "cleanliness": "Соблюдаем <b>чистоту</b>, используем накидки на сидения, коврики и не только.",
+  "by_appointment": "Работаем <b>по записи</b>, бережём своё и Ваше время.",
+  "parts_ordering": "Можем сами составить список, найти или заказать <b>запчасти</b> и масла.",
+  "modern_software": "Используем <b>современное ПО</b> для автосервисов и специнструменты.",
+  "official_work": "Работаем <b>официально</b> и предоставляем все необходимые документы.",
   "cases_and_reviews": "Кейсы и отзывы клиентов",
   "how_we_work": "Как мы работаем",
   "contact": "Обращение",
-  "contact_description": "Пишите нам соц. сети или звоните по телефону.",
+  "contact_description": "Пишите нам <b>соц. сети</b> или звоните по телефону.",
   "contact_recommendation": "Рекомендуем сразу указать марку, модель, год и VIN код.",
-  "consultation": "Консультация и диагностика",
-  "consultation_description": "Вы приезжаете в наш сервис, мастер проводит осмотр автомобиля и с Вами согласовывается стоимость работ и сроки.",
-  "parts": "Запчасти, масла и расходники",
-  "parts_description": "Мы можем подобрать, найти и заказать необходимые запчасти.",
-  "parts_details": "100% предоплата. При заказе сроки 10-14 дней. Так же доступна установка ваших запчастей.",
-  "repair": "Ремонт и обслуживание",
-  "repair_description": "Наши мастера проводят все необходимые виды работ.",
-  "repair_guarantee": "Гарантия до 6 месяцев, в зависимости от типа ремонта.",
-  "ready": "Можно ехать",
-  "ready_description": "Мы связываемся с Вами, когда работа подходит к концу. Проводится контроль качества. Вы забираете автомобиль.",
-  "technical_capabilities": "Технические возможности и оборудование",
-  "lifts": "3 подъёмника",
-  "press": "Пресс до 20 тонн",
+  "consultation_and_diagnostics": "Консультация и диагностика",
+  "diagnostics_description": "Вы приезжаете в наш сервис, мастер проводит <b>осмотр</b> автомобиля и с Вами согласовывается стоимость работ и сроки.",
+  "parts_and_oils": "Запчасти, масла и расходники",
+  "parts_description": "Мы можем подобрать, найти и заказать необходимые <b>запчасти</b>.",
+  "parts_payment": "100% предоплата. При заказе сроки 10-14 дней. Так же доступна установка ваших запчастей.",
+  "repair_and_maintenance": "Ремонт и обслуживание",
+  "repair_description": "Наши мастера проводят все необходимые виды <b>работ</b>.",
+  "warranty": "Гарантия до 6 месяцев, в зависимости от типа ремонта.",
+  "ready_to_go": "Можно ехать",
+  "completion_description": "Мы связываемся с Вами, когда работа подходит к концу. Проводится контроль качества. Вы <b>забираете</b> автомобиль.",
   "welding_equipment": "Сварочные: полуавтомат и инвертор",
-  "air_tools": "Гайковёрты, компрессор",
+  "tools": "Гайковёрты, компрессор",
   "co2_check": "Проверка CO₂ в жидкостях",
   "smoke_generator": "Дымогенератор",
   "diagnostic_equipment": "Диагностическое оборудование",
@@ -65,7 +62,7 @@
   "contacts": "Контакты",
   "phone": "Телефон:",
   "address": "Адрес:",
-  "working_schedule": "График работы:",
+  "working_schedule": "График работы: <b>пн-вс с 10:00 до 19:00</b>",
   "social_networks": "Наши соц. сети:",
   "copyright": "Автосервис Georgia Like Auto © 2025"
 } 
