Обновил локализацию в HTML и JSON файлах, изменил текст на английском и грузинском языках, добавил атрибуты для локализации в index.html, улучшил структуру разметки для лучшей читаемости и поддержки i18n.

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -6,7 +6,8 @@
   "average_experience": "მასტერების საშუალო გამოცდილება",
   "in_batumi": "ბათუმში",
   "working_hours": "კვირაში 7 დღე, 10:00-დან 19:00-მდე",
-  "sales_and_discounts": "ფასდაკლებები და აქციები",
+  "sales_and_discounts": "აქციები და ფასდაკლებები",
+  "sales_and_discounts_header": "აქციები 🫰",
   "cashback_cards": "ქეშბექის ბარათები",
   "save_up_to": "დაზოგეთ <b>7%</b> სამუშაოებსა და запчастях-ზე მუდმივი მომხმარებლის ბარათით",
   "all_may": "მთელი <b>მაისი</b> ფასდაკლება <b>10%</b>",
@@ -41,39 +42,13 @@
   "contact": "კონტაქტი",
   "contact_description": "დაგვიწერეთ <b>სოციალურ ქსელებში</b> ან დაგვირეკეთ.",
   "contact_recommendation": "გირჩევთ დაუყოვნებლივ მიუთითოთ მარკა, მოდელი, წელი და VIN კოდი.",
-  "consultation": "კონსულტაცია და დიაგნოსტიკა",
-  "consultation_description": "მოდიხართ ჩვენს სერვისში, მასტერი ატარებს მანქანის <b>შემოწმებას</b> და თანხმდება თქვენთან სამუშაოების ღირებულებასა და ვადებზე.",
-  "parts": "დამხმარე ნაწილები, ზეთები და სახარჯო მასალები",
-  "parts_description": "შეგვიძლია შევარჩიოთ, ვიპოვოთ და შევუკვეთოთ საჭირო <b>დამხმარე ნაწილები</b>.",
-  "parts_details": "100% წინასწარ გადახდა. შეკვეთისას ვადები 10-14 დღეა. ასევე ხელმისაწვდომია თქვენი დამხმარე ნაწილების მონტაჟი.",
-  "repair": "რემონტი და მომსახურება",
-  "repair_description": "ჩვენი მასტერები ასრულებენ ყველა საჭირო სახის <b>სამუშაოს</b>.",
-  "repair_guarantee": "გარანტია 6 თვემდე, რემონტის ტიპის მიხედვით.",
-  "ready": "შეგიძლიათ წახვიდეთ",
-  "ready_description": "დაგიკავშირდებით, როდესაც სამუშაო დასრულდება. ხორციელდება ხარისხის კონტროლი. თქვენ <b>იღებთ</b> მანქანას.",
-  "technical_capabilities": "ტექნიკური შესაძლებლობები და აღჭურვილობა",
-  "lifts": "3 ამწე",
-  "press": "პრესი 20 ტონამდე",
-  "welding_equipment": "შედუღება: ნახევრად ავტომატი და ინვერტორი",
-  "air_tools": "ჰაერის ხრახნიანი, კომპრესორი",
-  "co2_check": "CO₂-ის შემოწმება სითხეებში",
-  "smoke_generator": "დიმის გენერატორი",
-  "diagnostic_equipment": "დიაგნოსტიკური აღჭურვილობა",
-  "special_tools": "სპეციალური ინსტრუმენტები, ფიქსატორები",
-  "pullers": "მრავალი ამოღება და საკრავი",
-  "crane": "1.5 ტონიანი ამწე",
-  "contacts": "კონტაქტები",
-  "phone": "ტელეფონი:",
-  "address": "მისამართი:",
-  "working_schedule": "სამუშაო საათები: <b>ორშ-კვირა 10:00-დან 19:00-მდე</b>",
-  "social_networks": "ჩვენი სოციალური ქსელები:",
-  "copyright": "ავტოსერვისი Georgia Like Auto © 2025",
   "consultation_and_diagnostics": "კონსულტაცია და დიაგნოსტიკა",
   "diagnostics_description": "თქვენ მოდიხართ ჩვენს სერვისში, ოსტატი ახორციელებს მანქანის <b>ინსპექტირებას</b> და თანხმდება თქვენთან სამუშაოს ღირებულებასა და ვადებზე.",
   "parts_and_oils": "ნაწილები, ზეთები და სახარჯი მასალები",
+  "parts_description": "შეგვიძლია შევარჩიოთ, ვიპოვოთ და შევუკვეთოთ საჭირო <b>ნაწილები</b>.",
   "parts_payment": "100% წინასწარ გადახდა. შეკვეთის ვადა 10-14 დღე. ასევე ხელმისაწვდომია თქვენი ნაწილების მონტაჟი.",
   "repair_and_maintenance": "რემონტი და მოვლა",
-  "repair_and_maintenance_description": "ჩვენი ოსტატები ასრულებენ ყველა საჭირო სახის <b>სამუშაოს</b>.",
+  "repair_description": "ჩვენი ოსტატები ასრულებენ ყველა საჭირო სახის <b>სამუშაოს</b>.",
   "warranty": "გარანტია 6 თვემდე, რემონტის ტიპის მიხედვით.",
   "ready_to_go": "მზადაა გასვლა",
   "completion_description": "ჩვენ დაგიკავშირდებით, როდესაც სამუშაო დასრულებისკენ მიდის. ხორციელდება ხარისხის კონტროლი. თქვენ <b>იღებთ</b> მანქანას.",
@@ -84,5 +59,15 @@
   "diagnostic_equipment": "დიაგნოსტიკური აღჭურვილობა",
   "special_tools": "სპეციალური ხელსაწყოები, ფიქსატორები",
   "pullers": "მრავალი ამწევი და გასაღები",
-  "crane": "1.5 ტონიანი ამწე"
+  "crane": "1.5 ტონიანი ამწე",
+  "contacts": "კონტაქტები",
+  "phone": "ტელეფონი:",
+  "address": "მისამართი:",
+  "working_schedule": "სამუშაო საათები: <b>ორშ-კვირა 10:00-დან 19:00-მდე</b>",
+  "social_networks": "ჩვენი სოციალური ქსელები:",
+  "copyright": "ავტოსერვისი Georgia Like Auto © 2025",
+  "technical_capabilities": "ტექნიკური შესაძლებლობები და აღჭურვილობა",
+  "years_experience": "15 წელი",
+  "years_in_batumi": "3 წელი",
+  "days_working": "7 დღე"
 } 
