--- a/locales/ru.json
+++ b/locales/ru.json
@@ -3,10 +3,12 @@
   "company_name": "Georgia Like Auto",
   "multibrand": "Мультибренд",
   "successful_repairs": "успешных ремонтов",
+  "successful_repairs_count": "7000+",
   "average_experience": "средний стаж мастеров",
   "in_batumi": "в Батуми",
   "working_hours": "в неделю, с 10 до 19",
   "sales_and_discounts": "Акции и скидки",
+  "sales_and_discounts_header": "Акции 🫰",
   "cashback_cards": "Карты кэшбека",
   "save_up_to": "Экономьте до <b>7%</b> на работах и запчастях с картой постоянного покупателя",
   "all_may": "Весь <b>Май</b> скидка <b>10%</b>",
@@ -59,10 +61,14 @@
   "special_tools": "Специнструменты, фиксаторы",
   "pullers": "Множество съёмников и ключей",
   "crane": "Кран 1,5 тонны",
+  "technical_capabilities": "Технические возможности и оборудование",
   "contacts": "Контакты",
   "phone": "Телефон:",
   "address": "Адрес:",
   "working_schedule": "График работы: <b>пн-вс с 10:00 до 19:00</b>",
   "social_networks": "Наши соц. сети:",
-  "copyright": "Автосервис Georgia Like Auto © 2025"
+  "copyright": "Автосервис Georgia Like Auto © 2025",
+  "years_experience": "15 лет",
+  "years_in_batumi": "3 года",
+  "days_working": "7 дней"
 } 
