--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
   "in_batumi": "in Batumi",
   "working_hours": "7 days a week, from 10 AM to 7 PM",
   "sales_and_discounts": "Promotions and Discounts",
+  "sales_and_discounts_header": "Promotions 🫰",
   "cashback_cards": "Cashback Cards",
   "save_up_to": "Save up to <b>7%</b> on works and spare parts with a loyalty card",
   "all_may": "All <b>May</b> discount <b>10%</b>",
@@ -21,7 +22,7 @@
   "welding": "Metal Welding",
   "manual_transmission": "Manual Transmission",
   "leak_repair": "Leak Repair",
-  "interior": "Interior Assembly/Disassembly",
+  "interior": "Interior Assembly / Disassembly",
   "what_we_dont_do": "What We DON'T Do",
   "automatic_transmission": "Automatic transmission repair, but we can replace the entire gearbox or change the oil",
   "body_repair": "Body Repair",
@@ -41,26 +42,23 @@
   "contact": "Contact",
   "contact_description": "Write to us on <b>social networks</b> or call by phone.",
   "contact_recommendation": "We recommend specifying the make, model, year and VIN code right away.",
-  "consultation": "Consultation and Diagnostics",
-  "consultation_description": "You come to our service, the master conducts an <b>inspection</b> of the car and agrees with you on the cost of work and terms.",
-  "parts": "Spare Parts, Oils and Consumables",
+  "consultation_and_diagnostics": "Consultation and Diagnostics",
+  "diagnostics_description": "You come to our service, the master <b>inspects</b> the car and agrees with you on the cost of work and deadlines.",
+  "parts_and_oils": "Parts, Oils and Consumables",
   "parts_description": "We can select, find and order necessary <b>spare parts</b>.",
-  "parts_details": "100% prepayment. When ordering, terms are 10-14 days. Installation of your spare parts is also available.",
-  "repair": "Repair and Maintenance",
+  "parts_payment": "100% prepayment. Order lead time 10-14 days. Installation of your parts is also available.",
+  "repair_and_maintenance": "Repair and Maintenance",
   "repair_description": "Our masters perform all necessary types of <b>work</b>.",
-  "repair_guarantee": "Warranty up to 6 months, depending on the type of repair.",
-  "ready": "Ready to Go",
-  "ready_description": "We contact you when the work is coming to an end. Quality control is performed. You <b>pick up</b> the car.",
-  "technical_capabilities": "Technical Capabilities and Equipment",
-  "lifts": "3 Lifts",
-  "press": "Press up to 20 tons",
+  "warranty": "Warranty up to 6 months, depending on the type of repair.",
+  "ready_to_go": "Ready to Go",
+  "completion_description": "We contact you when the work is coming to an end. Quality control is performed. You <b>pick up</b> the car.",
   "welding_equipment": "Welding: semi-automatic and inverter",
-  "air_tools": "Impact wrenches, compressor",
+  "tools": "Wrenches, compressor",
   "co2_check": "CO₂ check in fluids",
   "smoke_generator": "Smoke generator",
   "diagnostic_equipment": "Diagnostic equipment",
-  "special_tools": "Special tools, holders",
-  "pullers": "Many pullers and wrenches",
+  "special_tools": "Special tools, fixtures",
+  "pullers": "Multiple pullers and wrenches",
   "crane": "1.5 ton crane",
   "contacts": "Contacts",
   "phone": "Phone:",
@@ -68,19 +66,9 @@
   "working_schedule": "Working hours: <b>Mon-Sun from 10:00 AM to 7:00 PM</b>",
   "social_networks": "Our social networks:",
   "copyright": "Auto Service Georgia Like Auto © 2025",
-  "consultation_and_diagnostics": "Consultation and Diagnostics",
-  "diagnostics_description": "You come to our service, the master <b>inspects</b> the car and agrees with you on the cost of work and deadlines.",
-  "parts_and_oils": "Parts, Oils and Consumables",
-  "parts_payment": "100% prepayment. Order lead time 10-14 days. Installation of your parts is also available.",
-  "repair_and_maintenance": "Repair and Maintenance",
-  "warranty": "Warranty up to 6 months, depending on the type of repair.",
-  "ready_to_go": "Ready to Go",
-  "completion_description": "We contact you when the work is coming to an end. Quality control is performed. You <b>pick up</b> the car.",
-  "tools": "Wrenches, compressor",
-  "co2_check": "CO₂ check in fluids",
-  "smoke_generator": "Smoke generator",
-  "diagnostic_equipment": "Diagnostic equipment",
-  "special_tools": "Special tools, fixtures",
-  "pullers": "Multiple pullers and wrenches",
-  "crane": "1.5 ton crane"
+  "technical_capabilities": "Technical capabilities and equipment",
+  "years_experience": "15 years",
+  "years_in_batumi": "3 years",
+  "days_working": "7 days",
+  "successful_repairs_count": "7000+"
 } 
