Обновил локализацию в HTML и JSON файлах, добавил новые отзывы на английском и грузинском языках, улучшил структуру разметки для поддержки i18n и добавил атрибуты для локализации в index.html.

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -69,5 +69,10 @@
   "technical_capabilities": "ტექნიკური შესაძლებლობები და აღჭურვილობა",
   "years_experience": "15 წელი",
   "years_in_batumi": "3 წელი",
-  "days_working": "7 დღე"
+  "days_working": "7 დღე",
+  "review_yakov": "შესანიშნავი სერვისი! მანქანაზე სხვადასხვა სახის სამუშაოების შესრულება დაგვჭირდა - გამონაბოლქვის შემოწმება, გენერატორის ღვედი, საკიდების კოილოვერების რეგულირება და ასევე ბენზინის სუნის მიზეზის გარკვევა გარეთ და სალონში. მოწესრიგებულად და სწრაფად შევთანხმდით მიღების დროს, გავარკვიეთ პრობლემები და ასევე გადავხედეთ სხვა საკითხებს, ყოველთვის ვიყავით კონტაქტში, დაგვეხმარნენ ნაწილების ძიებაში, არჩევაში და შეძენაში. ყველა პრობლემა საბოლოოდ მოგვარდა, სწრაფად და ჩქარობის გარეშე - დიდი მადლობა! კვლავ დაგიკავშირდებით",
+  "review_vadim": "შესანიშნავი სერვისი, ჩაწერით, ოსტატი ალექსანდრე პროფესიონალია, ყველაფერს კარგად ხსნის რემონტის დროს და სწრაფად მუშაობს. მოემსახურა ქვედა ნაწილს და მუხრუჭებს, სამუშაოების ფართო სპექტრი. გირჩევთ 🤟",
+  "review_andrey": "კარგი სერვისი: ყველაფერი სუფთაა, ფართო, არ არის ისეთი, რომ ერთი მანქანა მეორეზე დგას. W/A-ით დავწერე. ზეთის შეცვლაზე ივანესთან (ოსტატი) დავწერე. ყველაფერი სწრაფად და ხარისხიანად გაკეთდა. პარალელურად განვიხილეთ წინა საკიდების მდგომარეობა და სხვა საკითხები მანქანაზე. მომსახურება 5+.",
+  "review_qq": "პროფესიონალები თავიანთ სფეროში! ხარისხიანი, თანმიმდევრული შესრულება, ფოტოანგარიშებით ყველა ეტაპზე)) ასევე მინდა აღვნიშნო, რომ სამუშაოები დასრულდა ვადაზე ადრე, მასზე მეტი დროის დათმობით, ვიდრე მითითებულია სერვისის სამუშაო საათებში. შესანიშნავი, ორგანიზებული მუშაობა ყველა ეტაპზე. მადლობა. ყველას გირჩევთ!",
+  "review_alexander": "რუსეთიდან შემდეგ ბათუმში ავტოსერვისებში შესვლა საშიში იყო, დიდად არ იწვევდნენ ნდობას. შემთხვევით ვიპოვე ეს სერვისი, რუსეთიდან ბიჭები მუშაობენ, ყველაფერს მშვიდად, გონივრულად აკეთებენ, მომწონს."
 } 
