--- a/locales/ru.json
+++ b/locales/ru.json
@@ -70,5 +70,10 @@
   "copyright": "Автосервис Georgia Like Auto © 2025",
   "years_experience": "15 лет",
   "years_in_batumi": "3 года",
-  "days_working": "7 дней"
+  "days_working": "7 дней",
+  "review_yakov": "Отличный сервис! Нужно было выполнить разные виды работ по машине - проверить выхлопную, ремень генератора, поднять койловеры в подвеске, а так же выяснить причину запаха бензина снаружи и в салоне. Вежливо и оперативно подобрали время приема, разобрались в проблемах и заодно смотрели на прочие моменты по пути, всегда были на связи, помогли с поиском, выбором и покупкой запчастей. Все проблемы по итогу решены, оперативно и без спешки - спасибо большое! Буду обращаться еще",
+  "review_vadim": "Отличный сервис, по записи, мастер Александр профи, всё хорошо объясняет по ходу ремонта и быстро делает. Обслуживал ходовую и тормоза, спектр работ широкий. Рекомендую 🤟",
+  "review_andrey": "Хороший сервис: все чисто, просторно, нету такого, что одна машина на другой. Записался через W/A. Записывался на замену масла к Ивану (мастер). Все сделал быстро, качественно. Параллельно обсудили состояние передних рычагов подвески и другие вопросы по авто. Обслуживание на 5+.",
+  "review_qq": "Профессионалы своего дела! Качественное,последовательное исполнение ,с фотоотчетом на всех этапах)) Так же хочу отметить что работы выполнились в раньший срок чем обещали,посредством того что уделили этому больше времени чем указано в часах работы автосервиса. Отличная ,организованная работа на всех этапах. Благодарю. Всем рекомендую!",
+  "review_alexander": "После России было страшно заезжать в автосервисы в Батуми, сильно не внушали доверия. Чудом нашёл этот сервис, работают парни из России, делают всё спокойно, рассудительно, мне нравится."
 } 
