--- a/locales/en.json
+++ b/locales/en.json
@@ -70,5 +70,10 @@
   "years_experience": "15 years",
   "years_in_batumi": "3 years",
   "days_working": "7 days",
-  "successful_repairs_count": "7000+"
+  "successful_repairs_count": "7000+",
+  "review_yakov": "Excellent service! We needed to perform various types of work on the car - check the exhaust, alternator belt, adjust coilovers in the suspension, and also find out the cause of the gasoline smell outside and inside. They politely and quickly arranged an appointment time, figured out the problems and also looked at other issues along the way, were always in touch, helped with finding, choosing and purchasing parts. All problems were solved in the end, quickly and without rush - thank you very much! I will contact you again",
+  "review_vadim": "Excellent service, by appointment, master Alexander is a pro, explains everything well during the repair and works quickly. Serviced the chassis and brakes, wide range of work. I recommend 🤟",
+  "review_andrey": "Good service: everything is clean, spacious, no cars stacked on top of each other. Booked through W/A. Booked for oil change with Ivan (master). Everything was done quickly and efficiently. In parallel, we discussed the condition of the front suspension arms and other car issues. Service is 5+.",
+  "review_qq": "Professionals in their field! Quality, consistent execution, with photo reports at all stages)) I would also like to note that the work was completed earlier than promised, by dedicating more time to it than indicated in the service center's working hours. Excellent, organized work at all stages. Thank you. I recommend to everyone!",
+  "review_alexander": "After Russia, I was afraid to go to auto services in Batumi, they didn't inspire much confidence. By chance I found this service, guys from Russia work here, they do everything calmly, thoughtfully, I like it."
 } 
