--- a/locales/ka.json
+++ b/locales/ka.json
@@ -13,11 +13,11 @@
   "all_may": "მთელი <b>მაისი</b> ფასდაკლება <b>10%</b>",
   "cooling_system": "გაგრილების სისტემის სამუშაოებზე, თერმოსტატებზე, ტუმბოებზე, რადიატორებსა და ანტიფრიზზე",
   "services_and_specialization": "მომსახურება და სპეციალიზაცია",
-  "maintenance": "ტექნიკური მომსახურება ☆",
-  "diagnostics": "დიაგნოსტიკა ☆",
-  "chassis": "ქვედა ნაწილი ☆",
-  "engine": "ძრავა ☆",
-  "brakes": "მუხრუჭები ☆",
+  "maintenance": "ტექნიკური მომსახურება ☆",
+  "diagnostics": "დიაგნოსტიკა ☆",
+  "chassis": "ქვედა ნაწილი ☆",
+  "engine": "ძრავა ☆",
+  "brakes": "მუხრუჭები ☆",
   "electrical": "ელექტრიკოსი",
   "welding": "მეტალის შედუღება",
   "manual_transmission": "მექანიკური კოლოფი",
@@ -74,5 +74,7 @@
   "review_vadim": "შესანიშნავი სერვისი, ჩაწერით, ოსტატი ალექსანდრე პროფესიონალია, ყველაფერს კარგად ხსნის რემონტის დროს და სწრაფად მუშაობს. მოემსახურა ქვედა ნაწილს და მუხრუჭებს, სამუშაოების ფართო სპექტრი. გირჩევთ 🤟",
   "review_andrey": "კარგი სერვისი: ყველაფერი სუფთაა, ფართო, არ არის ისეთი, რომ ერთი მანქანა მეორეზე დგას. W/A-ით დავწერე. ზეთის შეცვლაზე ივანესთან (ოსტატი) დავწერე. ყველაფერი სწრაფად და ხარისხიანად გაკეთდა. პარალელურად განვიხილეთ წინა საკიდების მდგომარეობა და სხვა საკითხები მანქანაზე. მომსახურება 5+.",
   "review_qq": "პროფესიონალები თავიანთ სფეროში! ხარისხიანი, თანმიმდევრული შესრულება, ფოტოანგარიშებით ყველა ეტაპზე)) ასევე მინდა აღვნიშნო, რომ სამუშაოები დასრულდა ვადაზე ადრე, მასზე მეტი დროის დათმობით, ვიდრე მითითებულია სერვისის სამუშაო საათებში. შესანიშნავი, ორგანიზებული მუშაობა ყველა ეტაპზე. მადლობა. ყველას გირჩევთ!",
-  "review_alexander": "რუსეთიდან შემდეგ ბათუმში ავტოსერვისებში შესვლა საშიში იყო, დიდად არ იწვევდნენ ნდობას. შემთხვევით ვიპოვე ეს სერვისი, რუსეთიდან ბიჭები მუშაობენ, ყველაფერს მშვიდად, გონივრულად აკეთებენ, მომწონს."
+  "review_alexander": "რუსეთიდან შემდეგ ბათუმში ავტოსერვისებში შესვლა საშიში იყო, დიდად არ იწვევდნენ ნდობას. შემთხვევით ვიპოვე ეს სერვისი, რუსეთიდან ბიჭები მუშაობენ, ყველაფერს მშვიდად, გონივრულად აკეთებენ, მომწონს.",
+  "press": "პრესი 20 ტონამდე",
+  "lifts": "3 ამწე"
 } 
