--- a/locales/ru.json
+++ b/locales/ru.json
@@ -14,11 +14,11 @@
   "all_may": "Весь <b>Май</b> скидка <b>10%</b>",
   "cooling_system": "на все работы по системе охлаждения, термостаты, помпы, радиаторы и антифриз",
   "services_and_specialization": "Услуги и специализация",
-  "maintenance": "Техническое обслуживание ☆",
-  "diagnostics": "Диагностика ☆",
-  "chassis": "Ходовая ☆",
-  "engine": "Двигатель ☆",
-  "brakes": "Тормоза ☆",
+  "maintenance": "Техническое обслуживание ☆",
+  "diagnostics": "Диагностика ☆",
+  "chassis": "Ходовая ☆",
+  "engine": "Двигатель ☆",
+  "brakes": "Тормоза ☆",
   "electrical": "Электрик",
   "welding": "Сварка металла",
   "manual_transmission": "МКПП",
@@ -75,5 +75,7 @@
   "review_vadim": "Отличный сервис, по записи, мастер Александр профи, всё хорошо объясняет по ходу ремонта и быстро делает. Обслуживал ходовую и тормоза, спектр работ широкий. Рекомендую 🤟",
   "review_andrey": "Хороший сервис: все чисто, просторно, нету такого, что одна машина на другой. Записался через W/A. Записывался на замену масла к Ивану (мастер). Все сделал быстро, качественно. Параллельно обсудили состояние передних рычагов подвески и другие вопросы по авто. Обслуживание на 5+.",
   "review_qq": "Профессионалы своего дела! Качественное,последовательное исполнение ,с фотоотчетом на всех этапах)) Так же хочу отметить что работы выполнились в раньший срок чем обещали,посредством того что уделили этому больше времени чем указано в часах работы автосервиса. Отличная ,организованная работа на всех этапах. Благодарю. Всем рекомендую!",
-  "review_alexander": "После России было страшно заезжать в автосервисы в Батуми, сильно не внушали доверия. Чудом нашёл этот сервис, работают парни из России, делают всё спокойно, рассудительно, мне нравится."
+  "review_alexander": "После России было страшно заезжать в автосервисы в Батуми, сильно не внушали доверия. Чудом нашёл этот сервис, работают парни из России, делают всё спокойно, рассудительно, мне нравится.",
+  "press": "Пресс до 20 тонн",
+  "lifts": "3 подъёмника"
 } 
