Обновил локализацию в HTML и JSON файлах, изменил атрибуты языка для поддержки английского и грузинского, добавил классы для стилизации в соответствии с языком, улучшил структуру разметки и стили для лучшей читаемости и поддержки i18n.

--- a/locales/en.json
+++ b/locales/en.json
@@ -77,5 +77,6 @@
   "review_qq": "Professionals in their field! Quality, consistent execution, with photo reports at all stages)) I would also like to note that the work was completed earlier than promised, by dedicating more time to it than indicated in the service center's working hours. Excellent, organized work at all stages. Thank you. I recommend to everyone!",
   "review_alexander": "After Russia, I was afraid to go to auto services in Batumi, they didn't inspire much confidence. By chance I found this service, guys from Russia work here, they do everything calmly, thoughtfully, I like it.",
   "press": "Press up to 20 tons",
-  "lifts": "3 lifts"
+  "lifts": "3 lifts",
+  "lang": "en"
 } 
