--- a/locales/ka.json
+++ b/locales/ka.json
@@ -76,5 +76,6 @@
   "review_qq": "პროფესიონალები თავიანთ სფეროში! ხარისხიანი, თანმიმდევრული შესრულება, ფოტოანგარიშებით ყველა ეტაპზე)) ასევე მინდა აღვნიშნო, რომ სამუშაოები დასრულდა ვადაზე ადრე, მასზე მეტი დროის დათმობით, ვიდრე მითითებულია სერვისის სამუშაო საათებში. შესანიშნავი, ორგანიზებული მუშაობა ყველა ეტაპზე. მადლობა. ყველას გირჩევთ!",
   "review_alexander": "რუსეთიდან შემდეგ ბათუმში ავტოსერვისებში შესვლა საშიში იყო, დიდად არ იწვევდნენ ნდობას. შემთხვევით ვიპოვე ეს სერვისი, რუსეთიდან ბიჭები მუშაობენ, ყველაფერს მშვიდად, გონივრულად აკეთებენ, მომწონს.",
   "press": "პრესი 20 ტონამდე",
-  "lifts": "3 ამწე"
+  "lifts": "3 ამწე",
+  "lang": "ka"
 } 
