--- a/locales/ru.json
+++ b/locales/ru.json
@@ -77,5 +77,6 @@
   "review_qq": "Профессионалы своего дела! Качественное,последовательное исполнение ,с фотоотчетом на всех этапах)) Так же хочу отметить что работы выполнились в раньший срок чем обещали,посредством того что уделили этому больше времени чем указано в часах работы автосервиса. Отличная ,организованная работа на всех этапах. Благодарю. Всем рекомендую!",
   "review_alexander": "После России было страшно заезжать в автосервисы в Батуми, сильно не внушали доверия. Чудом нашёл этот сервис, работают парни из России, делают всё спокойно, рассудительно, мне нравится.",
   "press": "Пресс до 20 тонн",
-  "lifts": "3 подъёмника"
-} 
+  "lifts": "3 подъёмника",
+  "lang": "ru"
+}
