Обновил зависимости в package-lock.json, добавил новый скрипт promotions.js в index.html и изменил текст в грузинском языке для поля "save_up_to". Это улучшает функциональность приложения и поддерживает многоязычность.

--- a/src/locales/ka.json
+++ b/src/locales/ka.json
@@ -9,7 +9,7 @@
   "sales_and_discounts": "აქციები და ფასდაკლებები",
   "sales_and_discounts_header": "აქციები 🫰",
   "cashback_cards": "ქეშბექის ბარათები",
-  "save_up_to": "დაზოგეთ <b>7%</b> სამუშაოებსა და запчастях-ზე მუდმივი მომხმარებლის ბარათით",
+  "save_up_to": "დაზოგეთ <b>7%-მდე</b> შრომასა და ნაწილებზე ლოიალობის ბარათით",
   "all_may": "მთელი <b>მაისი</b> ფასდაკლება <b>10%</b>",
   "cooling_system": "გაგრილების სისტემის სამუშაოებზე, თერმოსტატებზე, ტუმბოებზე, რადიატორებსა და ანტიფრიზზე",
   "services_and_specialization": "მომსახურება და სპეციალიზაცია",
