feat: Add mechanic animation preview and update HTML structure
- Created a new HTML file for mechanic animation preview with layered images.
- Implemented a Python script to generate the preview HTML dynamically based on available images.
- Added multiple image layers for the mechanic animation.
- Updated index.html to include a new hero section with comprehensive car maintenance information.
- Enhanced localization files with new keys for the hero section.
- Improved CSS styles for the hero section and mechanic animation layers.
- Added new image assets for the mechanic animation.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,9 @@
 {
   "title": "Auto Service",
   "company_name": "Georgia Like Auto",
+  "complex_maintenance": "Comprehensive Car Maintenance",
+  "just_enjoy_driving": "You just have to enjoy driving",
+  "make_appointment": "Make an Appointment",
   "multibrand": "Multibrand",
   "successful_repairs": "successful repairs",
   "average_experience": "average experience of masters",
