--- a/src/locales/ka.json
+++ b/src/locales/ka.json
@@ -1,6 +1,9 @@
 {
   "title": "ავტოსერვისი",
   "company_name": "Georgia Like Auto",
+  "complex_maintenance": "მანქანის კომპლექსური მომსახურება",
+  "just_enjoy_driving": "თქვენ უბრალოდ უნდა ისიამოვნოთ მართვით",
+  "make_appointment": "ჩაწერა მომსახურებაზე",
   "multibrand": "მულტიბრენდი",
   "successful_repairs": "წარმატებული რემონტი",
   "average_experience": "მასტერების საშუალო გამოცდილება",
