feat: Enhance SEO metadata and localization for improved visibility and user experience

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,5 +81,12 @@
   "review_alexander": "After Russia, I was afraid to go to auto services in Batumi, they didn't inspire much confidence. By chance I found this service, guys from Russia work here, they do everything calmly, thoughtfully, I like it.",
   "press": "Press up to 20 tons",
   "lifts": "3 lifts",
+  "og_title": "Car Service Batumi | Chassis, Engine, Electrical Repair, Spare Parts | Georgia Like Auto",
+  "og_description": "Reliable car service in Batumi. Professional diagnostics, chassis repair, engine overhaul, auto electrician. Spare parts sales and ordering, heater repair. Quality guarantee.",
+  "og_locale": "en_US",
+  "og_url": "https://sto-batumi.ge/en/",
+  "seo_description": "Reliable car service in Batumi. Professional diagnostics, chassis repair, engine overhaul, auto electrician. Spare parts sales and ordering, heater repair. Quality guarantee.",
+  "seo_keywords": "car service Batumi, auto repair Batumi, diagnostics Batumi, chassis repair Batumi, engine repair Batumi, auto electrician Batumi, heater repair Batumi, car parts Batumi, oil change Batumi",
+  "heater_repair": "Heater Repair",
   "lang": "en"
 } 
