--- a/src/locales/ka.json
+++ b/src/locales/ka.json
@@ -80,5 +80,12 @@
   "review_alexander": "რუსეთიდან შემდეგ ბათუმში ავტოსერვისებში შესვლა საშიში იყო, დიდად არ იწვევდნენ ნდობას. შემთხვევით ვიპოვე ეს სერვისი, რუსეთიდან ბიჭები მუშაობენ, ყველაფერს მშვიდად, გონივრულად აკეთებენ, მომწონს.",
   "press": "პრესი 20 ტონამდე",
   "lifts": "3 ამწე",
+  "og_title": "ავტოსერვისი ბათუმში | სავალი ნაწილი, ძრავი, ელექტრიკა, ნაწილები | Georgia Like Auto",
+  "og_description": "სანდო ავტოსერვისი ბათუმში. პროფესიონალური დიაგნოსტიკა, სავალი ნაწილის შეკეთება, ძრავის კაპიტალური შეკეთება, ავტოელექტრიკოსი. ნაწილების გაყიდვა და შეკვეთა, ღუმელის შეკეთება. ხარისხის გარანტია.",
+  "og_locale": "ka_GE",
+  "og_url": "https://sto-batumi.ge/ka/",
+  "seo_description": "სანდო ავტოსერვისი ბათუმში. პროფესიონალური დიაგნოსტიკა, სავალი ნაწილის შეკეთება, ძრავის კაპიტალური შეკეთება, ავტოელექტრიკოსი. ნაწილების გაყიდვა და შეკვეთა, ღუმელის შეკეთება. ხარისხის გარანტია.",
+  "seo_keywords": "ავტოსერვისი ბათუმი, მანქანის შეკეთება ბათუმი, დიაგნოსტიკა ბათუმი, სავალი ნაწილის შეკეთება ბათუმი, ძრავის შეკეთება ბათუმი, ავტოელექტრიკოსი ბათუმი, ღუმელის შეკეთება ბათუმი, ავტონაწილები ბათუმი, ზეთის შეცვლა ბათუმი",
+  "heater_repair": "ღუმელის შეკეთება",
   "lang": "ka"
 } 
