--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -81,5 +81,12 @@
   "review_alexander": "После России было страшно заезжать в автосервисы в Батуми, сильно не внушали доверия. Чудом нашёл этот сервис, работают парни из России, делают всё спокойно, рассудительно, мне нравится.",
   "press": "Пресс до 20 тонн",
   "lifts": "3 подъёмника",
+  "og_title": "Автосервис Батуми | Ремонт ходовой, двигателя, электрики, запчасти | Georgia Like Auto",
+  "og_description": "Надежный автосервис в Батуми. Профессиональная диагностика, ремонт ходовой части, капитальный ремонт двигателя, автоэлектрик. Продажа и подбор запчастей, ремонт печки. Гарантия.",
+  "og_locale": "ru_RU",
+  "og_url": "https://sto-batumi.ge/",
+  "seo_description": "Надежный автосервис в Батуми. Профессиональная диагностика, ремонт ходовой части, капитальный ремонт двигателя, автоэлектрик. Продажа и подбор запчастей, ремонт печки. Гарантия.",
+  "seo_keywords": "автосервис Батуми, СТО Батуми, ремонт авто Батуми, диагностика авто Батуми, ремонт ходовой части Батуми, ремонт двигателя Батуми, автоэлектрик Батуми, ремонт печки Батуми, автозапчасти Батуми, замена масла Батуми",
+  "heater_repair": "Ремонт печки",
   "lang": "ru"
 }
